@startuml
!include DiagramaClase_Obstaculo.puml!SINSUBCLASES

class Piquete{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}
class Pozo{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}
class ControlPolicial{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}

Piquete ..|> Obstaculo
Pozo ..|> Obstaculo
ControlPolicial ..|> Obstaculo
@enduml

@startuml(id=SINSUBCLASES)
interface Obstaculo{
    + {abstract} avanzarEn( Vehiculo v ): ModificadorMovimiento
}
@enduml